# nicegui-g6

./: README.zh-CN.md  Taskfile.yml  pyproject.toml
nicegui_g6/: __init__.py  version.py
nicegui_g6/core/: g6.js  g6.py
vue_g6/: package.json  pnpm-lock.yaml  vite.config.ts
vue_g6/scripts/: vue_biild_file_tran.py
vue_g6/src/: App.vue
vue_g6/src/libs/: G6.vue  core.test.ts  core.ts  main.ts
